# DeepEval

./: .gitignore  README.md  pyproject.toml  requirements.txt
.deepeval/: .deepeval-cache.json  .deepeval_telemetry.txt  .latest_run_full.json  .latest_test_run.json
.github/workflows/: ci.yml
app/: __init__.py  calculator.py
deep_eval_integration/: __init__.py  evaluator.py
tests/: conftest.py  test_calculator.py  test_deepeval_integration.py  test_non_deterministic.py
